Configure static url

--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Backend Ranch</title>
     {% load static %}
-    <link rel="stylesheet" href='{% static "backendRanch/style.css" %}'>
-    <script src='{% static "backendRanch/main.js" %}'></script>
+    <link rel="stylesheet" href='{% static "style.css" %}'>
+    <script src='{% static "main.js" %}'></script>
 </head>
 <body>
     <div class="header">
