--- a/templates/post.html
+++ b/templates/post.html
@@ -5,6 +5,10 @@
           <p class='post'>
               <span class="post_title">{{ post.title }}</span><br><br>
               {{  post.content }} <br><br><br>
-              This entry was posted at <b>{{  post.created_on }}</b> regarding <a href="/tags/{{post.tag}}"><b>{{tags}}</b></a><br><br>
+              This entry was posted at <b>{{  post.created_on }}</b> regarding
+              {% for tag in post.tags.all() %}
+                <a href="/tags/{{post.tag}}"><b>{{{tag.name}}</b></a>
+              {% endtag %}
+              <br><br>
           </p>
 {% endblock %}
