--- a/templates/post.html
+++ b/templates/post.html
@@ -8,7 +8,7 @@
               This entry was posted at <b>{{  post.created_on }}</b> regarding
               {% for tag in post.tags.all() %}
                 <a href="/tags/{{post.tag}}"><b>{{{tag.name}}</b></a>
-              {% endtag %}
+              {% endfor %}
               <br><br>
           </p>
 {% endblock %}
