--- a/templates/post.html
+++ b/templates/post.html
@@ -7,7 +7,8 @@
               {{  post.content }} <br><br><br>
               This entry was posted at <b>{{  post.created_on }}</b> regarding
               {% for tag in tags %}
-              <a href="/tags/{{post.tag}}"><b>{{tag}}</b></a><br><br>
+              <a href="/tags/{{post.tag}}"><b>{{tag}}</b></a>,
               {% endfor %}
+              <br><br>
           </p>
 {% endblock %}
