--- a/templates/post.html
+++ b/templates/post.html
@@ -7,7 +7,7 @@
               {{  post.content }} <br><br><br>
               This entry was posted at <b>{{  post.created_on }}</b> regarding
               {% for tag in tags %}
-              <a href="/tags/{{post.tag}}"><b>{{tag}}</b></a>
+              <a href="/tags/{{tag}}"><b>{{tag}}</b></a>
 
               {% endfor %}
               <br><br>
