--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,10 @@
 
           <p class='post'>
               <span class="post_title">{{ post.title }}</span><br><br>
+              {% autoescape off %}
+              <b> {{ post.introduction }}</b>
               {{  post.content }} <br><br><br>
+              {% endautoescape %}
               This entry was posted at <b>{{  post.created_on }}</b> regarding
               {% for tag in post.tags.names %}
               <a href="/tags/{{tag}}"><b>{{tag}}</b></a>
