--- a/templates/posts.html
+++ b/templates/posts.html
@@ -10,7 +10,9 @@
               <p class='post_preview' onclick="getPost('{{ post.slug }}')">
                   <a href="/posts/{{post.slug}}" class="title">{{ post.title }}</a>
               </p>
+                {% autoescape off %}
                   {{  post.introduction }} <br><br>
+              {% endautoescape %}
 This entry was posted at <b>{{  post.created_on }}</b> regarding
               {% for tag in post.tags.names %}
               <a href="/tags/{{tag}}"><b>{{tag}}</b></a>
