--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -6,6 +6,11 @@
     {% load static %}
     <link rel="stylesheet" href='{% static "style.css" %}'>
     <script src='{% static "main.js" %}'></script>
+    <link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+<script src="/static/base/js/main.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
     <div class="header">
