Add code snippet

--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -35,8 +35,9 @@
                     <!--<p class="categories"><u><a href="/tags/machine%20learning">Machine Learning</a></u></p>-->
                     {% endfor %}
                 </div>
-                {% block content %} {% endblock %}
-
+                <div>
+                    {% block content %} {% endblock %}
+                </div>
             </div>
         </div>
     </div>
