--- a/templates/layout2.html
+++ b/templates/layout2.html
@@ -35,7 +35,7 @@
                     <!--<p class="categories"><u><a href="/tags/machine%20learning">Machine Learning</a></u></p>-->
                     {% endfor %}
                 </div>
-                <div>
+                <div style="width: 70%">
                     {% block content %} {% endblock %}
                 </div>
             </div>
